<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">the wheel deal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="let_s_go_string">Let\'s Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="premium_cars_string">Premium cars</string>
    <string name="affordable_luxury_cars_for_you_string">Affordable luxury cars for you</string>
    <string name="only_at_the_wheel_deal_string">Only at the wheel deal</string>
    <string name="welcome_back_string">Welcome Back</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="dont_have_an_account_string">Dont have an account?</string>
    <string name="forgot_your_password_string">forgot your password?</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="let_s_get_started_string">Let\'s get started</string>
    <string name="first_name_string">First Name</string>
    <string name="login_string">Login</string>
    <string name="by_registering_you_are_agreeing_to_the_string">By registering you are agreeing to the</string>
    <string name="terms_conditions_string"><![CDATA[Terms & Conditions]]></string>
    <string name="already_have_an_account_string">Already have an account?</string>
    <string name="sign_up2_string">Sign Up</string>
    <string name="last_name_string">last Name</string>
    <string name="id_number_stirng">ID number</string>
    <string name="contact_string" tools:ignore="DuplicateDefinition">Contact</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="yes_i_would_like_to_receive_latest_information_via_mail_string">Yes I would like to receive latest information via mail</string>
    <string name="description_string">Description</string>
    <string name="_254723456789_string">+254723456789</string>
    <string name="_time_string" tools:ignore="DuplicateDefinition">11.21 am</string>
    <string name="border_string">border</string>
    <string name="profileicon_string" tools:ignore="DuplicateDefinition">profileicon</string>
    <string name="callicon_string">callicon</string>
    <string name="missedcallicon_string">missedcallicon</string>
    <string name="thanks_string">thanks🙂</string>
    <string name="bordericon_string">bordericon</string>
    <string name="receivedicon_string" tools:ignore="DuplicateDefinition">receivedicon</string>
    <string name="call_string" tools:ignore="DuplicateDefinition">Call</string>
    <string name="categories_string" tools:ignore="DuplicateDefinition">Categories</string>
    <string name="chat_string" tools:ignore="DuplicateDefinition">Chat</string>
    <string name="profile_string" tools:ignore="DuplicateDefinition">Profile</string>
    <string name="home_string" tools:ignore="DuplicateDefinition">Home</string>
    <string name="backicon_string">Backicon</string>
    <string name="notificationicon_string">notificationicon</string>
    <string name="searchicon_string">searchicon</string>
    <string name="bottomnavbar_string">Bottomnavbar</string>
    <string name="homeicon_string">homeicon</string>
    <string name="addicon_string" tools:ignore="DuplicateDefinition">addicon</string>
    <string name="chaticon_string">chaticon</string>
    <string name="trucks_string">Trucks</string>
    <string name="buses_string">Buses</string>
    <string name="vans_sstring">Vans</string>
    <string name="luxury_string">Luxury</string>
    <string name="explore_string" tools:ignore="DuplicateDefinition">Explore</string>
    <string name="cars_string">Cars</string>
    <string name="_string">menuicon</string>
    <string name="searchbaricon_string">searchbaricon</string>
    <string name="profilepictureicon_string">profilepictureicon</string>
    <string name="recyclerview_string">recyclerview</string>
    <string name="categories_categories">Categories</string>
    <string name="logo_string">logo</string>
    <string name="splashimage_string">splashimage</string>
    <string name="splashbackground_string">splashbackground</string>
    <string name="region_string">Region</string>
    <string name="owner_name_string">Owner Name</string>
    <string name="type_string">Type</string>
    <string name="book_now_string">Book Now</string>
    <string name="descriptionbackground_string">descriptionbackground</string>
    <string name="carpicture_string">carpicture</string>
    <string name="picturenexticon_string" tools:ignore="DuplicateDefinition">picturenexticon</string>
    <string name="descriptionborder_string">descriptionborder</string>
    <string name="menuicon_string">menuicon</string>
    <string name="categoryicon_string" tools:ignore="DuplicateDefinition">categoryicon</string>
    <string name="_11_21am_string">11.21am</string>
    <string name="categoriesicon1_string">categoriesicon</string>
    <string name="cpp_background_string">CPP_Background</string>
    <string name="name_string">Name</string>
    <string name="chatmenuicon_string">chatmenuicon</string>
    <string name="inputtextfield_string">inputtextfield</string>
    <string name="sendicon_string">sendicon</string>
    <string name="message_string">Message</string>
    <string name="hello_string">Hello</string>
    <string name="categories_icon_string">categories icon</string>
    <string name="addbackgound">TODO</string>
    <string name="AddButton">TODO</string>
    <string name="Add">TextView</string>
    <string name="add">Add</string>
    <string name="enter_car_type_here_string">Enter car type here</string>
    <string name="enter_model_type_here_string">string</string>
    <string name="enter_model_type_heree_string">Enter Model type here</string>
    <string name="add_car">Add Car</string>
    <string name="type">Type:</string>
    <string name="model">Model:</string>
    <string name="mercedes_string">Mercedes</string>
    <string name="benz">Benz</string>
    <string name="kcw_201e_string">KCW 201E</string>
    <string name="regno_string">RegNo</string>
    <string name="image_string">Image</string>
    <string name="add_image_string">add image</string>
    <string name="select_image_string">select image</string>
    <string name="descriptiontb_string">Description:</string>
    <string name="descriptions_string">Description</string>
    <string name="user_profile_string">Profile</string>

</resources>