<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories_fragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:contentDescription="@string/searchicon_string"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="260dp"
        android:contentDescription="@string/notificationicon_string"
        android:src="@drawable/ic_baseline_notifications_none_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="42dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/_string"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search"

        android:layout_width="254dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/my_apptheme"
        android:textColorHint="#455A64"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintVertical_bias="0.444" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/searchbaricon_string"
        android:src="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/profilepictureicon_string"
        android:src="@drawable/border"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/recyclerview_string"
        android:src="@drawable/ui_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/trucks_string"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/buses_string"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/vans_sstring"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/luxury_string"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/explore_string"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cars_string"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="374dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.322"
        tools:listitem="@layout/landing_page_lists" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:contentDescription="@string/bottomnavbar_string"
        android:src="@drawable/botton_navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/chaticon_string"
        android:src="@drawable/ic_baseline_chat_bubble_24"
        app:layout_constraintBottom_toTopOf="@+id/_homeicon5"
        app:layout_constraintEnd_toStartOf="@+id/imageView32"
        app:layout_constraintTop_toTopOf="@+id/imageView32"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/_homeicon4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/chat_string"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView34"
        app:layout_constraintStart_toStartOf="@+id/imageView34"
        app:layout_constraintTop_toBottomOf="@+id/imageView34"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/_homeicon5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/profile_string"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView32"
        app:layout_constraintStart_toStartOf="@+id/imageView32"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/profileicon_string"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="37dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/homeicon_string"
        android:src="@drawable/ic_baseline_home_243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/_homeicon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/home_string"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView27"
        app:layout_constraintStart_toStartOf="@+id/imageView27"
        app:layout_constraintTop_toBottomOf="@+id/imageView27"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/_homeicon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/categories_string"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView31"
        app:layout_constraintStart_toStartOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/imageView31"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/addicon_string"
        android:src="@drawable/addbuttonwhite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:contentDescription="@string/addicon_string"
        android:src="@drawable/addbutton"
        app:layout_constraintBottom_toBottomOf="@+id/imageView25"
        app:layout_constraintEnd_toEndOf="@+id/imageView25"
        app:layout_constraintStart_toStartOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="@+id/imageView25"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/addicon_string"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView18"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:contentDescription="@string/categoriesicon1_string"
        android:src="@drawable/ic_baseline_category_243"
        app:layout_constraintBottom_toBottomOf="@+id/imageView27"
        app:layout_constraintStart_toEndOf="@+id/imageView27"
        app:layout_constraintTop_toTopOf="@+id/imageView27" />

</androidx.constraintlayout.widget.ConstraintLayout>