<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Item_details">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/searchicon_string"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:contentDescription="@string/notificationicon_string"
        android:src="@drawable/ic_baseline_notifications_none_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageView30"
        app:layout_constraintEnd_toStartOf="@+id/imageView30"
        app:layout_constraintTop_toTopOf="@+id/imageView30" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/backicon_string"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/search"

        android:layout_width="254dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/my_apptheme"
        android:textColorHint="#455A64"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6" />

    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintVertical_bias="0.444" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/searchbaricon_string"
        android:src="@drawable/border"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/profilepictureicon_string"
        android:src="@drawable/border"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/splashbackground_string"
        android:src="@drawable/ui_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="0dp"
        android:layout_height="341dp"
        android:contentDescription="@string/descriptionbackground_string"
        android:src="@drawable/ui_background_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="282dp"
        android:layout_height="161dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="49dp"
        android:contentDescription="@string/carpicture_string"
        android:src="@drawable/subaru"
        app:layout_constraintBottom_toTopOf="@+id/imageView33"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.358" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/picturenexticon_string"
        android:src="@drawable/addbuttonwhite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView35"
        app:layout_constraintTop_toTopOf="@+id/imageView35"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:contentDescription="@string/picturenexticon_string"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageView36"
        app:layout_constraintEnd_toEndOf="@+id/imageView36"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="@+id/imageView36"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="347dp"
        android:layout_height="144dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/descriptionborder_string"
        android:src="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:text="@string/type_string"
        app:layout_constraintEnd_toEndOf="@+id/imageView36"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView35"
        app:layout_constraintTop_toTopOf="@+id/imageView33" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="81dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/region_string"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/owner_name_string"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="81dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact_string"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/chatbutton"
        android:layout_width="156dp"
        android:layout_height="48dp"

        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/chat_string"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="normal"
        app:cornerRadius="34dp"
        app:iconPadding="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView38"
        app:layout_constraintTop_toBottomOf="@+id/imageView38"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/BookButton"
        android:layout_width="144dp"
        android:layout_height="48dp"

        android:layout_marginStart="48dp"
        android:backgroundTint="@color/my_apptheme"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/book_now_string"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:typeface="normal"
        app:cornerRadius="34dp"
        app:iconPadding="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/chatbutton"
        app:layout_constraintEnd_toEndOf="@+id/imageView38"
        app:layout_constraintStart_toEndOf="@+id/chatbutton"
        app:layout_constraintTop_toTopOf="@+id/chatbutton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>